--- a/CSS/TeachersPage.css
+++ b/CSS/TeachersPage.css
@@ -1,22 +1,30 @@
-.DefaultBlock {
-    margin: 30px 20px;
-    padding: 15px;
-    border-radius: 10px;
-    border: 2px dashed #333;
-}
-
-.IDField {
-    padding: 15px;
-}
-.ID {
-    padding: 15px;
+h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
 }
 
 .Student {
-    display: inline-block;
-    margin: 10px 0;
-    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    background: darkgray;
     border: 2px solid darkslategrey;
-    background: gray;
-    height: 100px;
+    margin: 5px;
+    padding: 3px 30px 3px 30px;
+
+}
+
+.tableStudents {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.ID {
+    display: flex;
+    justify-content: center;
+    background: darkgray;
+    border: 2px solid darkslategrey;
+    margin: 0 30% 0 30%;
+    border-radius: 10px;
 }
