--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,3 +1,27 @@
 #Teacher {
+    display: flex;
+    justify-content: center;
     font-size: 20px;
+}
+
+#OpenSession, #CreateSession, #teachersButton, #studentsButton{
+    display: flex;
+    justify-content: center;
+}
+
+#teachersButton, #studentsButton {
+    background: darkgray;
+    border: 2px solid darkslategrey;
+    margin: 0 30% 0 30%;
+    border-radius: 10px;
+    padding: 10px 40px;
+}
+
+section {
+    margin: 0 80px;
+}
+
+label {
+    display: flex;
+    justify-content: space-between;
 }
